@@ -10,6 +10,7 @@ parts =
 [docbuilderdocs]
 recipe = dataflake.docbuilder
 copy-output = true
+max-tags = 5
 eggs =  
   pkginfo
 sources =
